--- a/index.html
+++ b/index.html
@@ -420,27 +420,20 @@ not post
 
 <hr class="solid">
 
-ㅤ
-ㅤ
-ㅤ
-ㅤ
-ㅤ
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="home_style.css">
-</head>
-
-<body>
-
-<div class="header">
-    <div class="search_bar">
-        <input type="text" name="ㅤSearch Skin" value="ㅤSearch Skin">
-</div>
-
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="layout.css">
+	</head>
+	<body>
+		<div> 
+			<br> </br>
+			<input id = "input"> </input> 
+			<button id = "myButton">ㅤSearch Skinㅤ</button> 
+			<br> </br>
+		</div>
+		
 </html>
-ㅤ
 
 <hr class="solid">
 
